# Persona7

./: .Map.kra-autosave.kra  .gitignore  .stignore  Cargo.toml  Editor_Theme.jsonc  Map.kra  Map.kra~  Output  Output.txt  Persona6.code-workspace  Progress.md  backend.out  chat  db.sqlite3  docker-compose.yaml  environment.yml  generate  ollama.sh  output  ref.sh
Interim/: IMG_4761.HEIC  IMG_4762.HEIC  (+2 more)
Persona_Backend/: Cargo.toml
Persona_Backend/src/: main.rs  server.rs
Persona_Backend/src/misc/: time.rs
Persona_Backend/src/misc/ollama/: mod.rs  ollama.rs  options.rs
Persona_Backend/src/misc/ollama/scripts/: helper.rs
Persona_Backend/src/misc/sqlite/: mod.rs  structure  test.rs
Persona_Backend/src/personality/: action.rs  helper.rs  mod.rs
Persona_Backend/src/personality/memory/: associative.rs  short_term.rs  spatial.rs
Persona_Backend/src/personality/set_actions/: decide_object.rs  decide_room.rs  decompose.rs
Persona_Backend/src/server/: client.rs  message.rs  mod.rs  server.rs  test.rs
Persona_Backend/src/world/: character.rs  mod.rs  navigation.rs  utils.rs  world.rs  world_map.rs
Persona_Backend/src/world/worlds/: test.rs  yeong.rs
backend/: CANT  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/misc/: config.rs  mod.rs  time.rs
backend/src/misc/ollama/: ollama.rs  options.rs
backend/src/misc/sqlite/: helper.rs
backend/src/personality/: action.rs  helper.rs
backend/src/personality/chat/: mod.rs
backend/src/personality/memory/: short_term.rs  spatial.rs
backend/src/personality/set_actions/: decide_object.rs  decide_room.rs  decompose.rs  mod.rs  vague_schedule.rs  wake_sleep.rs
backend/src/server/: client.rs  mod.rs  server.rs
backend/src/world/: character.rs  mod.rs  navigation.rs  types.json  world.rs  world_map.rs
backend/src/world/worlds/: yeong.rs  yeong.txt
(+120 files in other folders)
