[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.37", features = ["derive", "env"]}
futures = "0.3.31"
lazy_static = "1.5.0"
reqwest = {version = "0.12.12", features = ["blocking", "json"]}
rusqlite = "0.33.0"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
tokio = {version = "1.43.0", features = ["full"]}
tokio-macros = "2.5.0"
xcf = "0.4.0"

[lints.rust]
unused = "allow"
